Fix horizontal scrollbar paddings in Material theme (#8473) (#8505)

--- a/styles/widgets/material/scrollable.material.less
+++ b/styles/widgets/material/scrollable.material.less
@@ -82,6 +82,13 @@
 .dx-scrollbar-horizontal {
     .dx-scrollable-scroll {
         height: @SCROLLBAR_SIZE_THIN;
+
+        &,
+        .dx-rtl & {
+            padding-left: 2px;
+            padding-right: 2px;
+            padding-bottom: 0;
+        }
     }
 
     &.dx-scrollbar-hoverable {
